adding reminder to copy notebook

--- a/hw0.ipynb
+++ b/hw0.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "This assignment has the format that all your later assignments will use, namely using a Goggle Colab notebook (you can also download it as use it as a local Jupyter notebook) to implement functions.  You will then test your implementations, first locally and then by submitting to the autograder.\n",
     "\n",
-    "To begin, you should run the following code cell to install and download all the necessary packages needed for this assignment."
+    "To begin, you should first **make a copy of this notebook** by selecting \"Save a copy in Drive\" from the file menu.  This step is very important, as otherwise Colab will try to make changes directly in the GitHub repo, and none of your changes will be saved.  You should then run the following code cell to install and download all the necessary packages needed for this assignment."
    ]
   },
   {
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@mugrade.submit_tests\n",
+    "@mugrade.local_tests\n",
     "def add(x,y):\n",
     "    \"\"\"\n",
     "    Add x and y\n",
