--- a/hw0.ipynb
+++ b/hw0.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "@mugrade.local_tests\n",
+    "@mugrade.submit_tests\n",
     "def add(x,y):\n",
     "    \"\"\"\n",
     "    Add x and y\n",
