fix small typos, formatting

--- a/hw0.ipynb
+++ b/hw0.ipynb
@@ -156,7 +156,7 @@
    "id": "b14211ef",
    "metadata": {},
    "source": [
-    "If all goes correctly, you should see feedback that the grader tests passed.  And when you view the mugrade site (you may need to refresh), you should see the assignment as being submitted correctly.  If anything goes wrong, you should see an error code that indicates if there is any obvious problem (for instance, if you didn't set the MUGRADE_KEY value above).  However, in general when you fail a submission we _don't_ provide very much feedback, because the goal is for you to use the local tests to debug your assignment, and the submission just to submit the final version.\n",
+    "If all goes correctly, you should see feedback that the grader tests passed.  And when you view the mugrade site (you may need to refresh), you should see the assignment as being submitted correctly.  If anything goes wrong, you should see an error code that indicates if there is any obvious problem (for instance, if you didn't set the `MUGRADE_KEY` value above).  However, in general when you fail a submission we _don't_ provide very much feedback, because the goal is for you to use the local tests to debug your assignment, and the submission just to submit the final version.\n",
     "\n",
     "**For the CMU course only (not needed for online course):** After you have submitted _all_ the assignments for the course, you should additionally upload the notebook itself: download the .ipynb notebook from Colab, and upload it to mugrade using the \"Upload Code\" link at the bottom of the page assignment page.\n",
     "\n",
@@ -359,7 +359,7 @@
     "$$p_1(x) = 3x^3 + 2x + 3, \\quad p_2(x) = 2x^2 + 5$$\n",
     "their multiplication is given by\n",
     "$$\\begin{split} p_1(x) \\cdot p_2(x) & = (3x^3 + 2x + 3) \\cdot 2x^2 + (3x^3 + 2x + 3) \\cdot 5 \\\\\n",
-    "& = (6x^5 + 4x^3 + 6x^2) + (15x^3 + 10x + 15) \\\\ & = 6x^5 + 19x^3 + 6x^2 + 10x + 15\\end{split}.$$\n",
+    "& = (6x^5 + 4x^3 + 6x^2) + (15x^3 + 10x + 15) \\\\ & = 6x^5 + 19x^3 + 6x^2 + 10x + 15.\\end{split}$$\n",
     "\n",
     "Implement this logic in the function below."
    ]
